Added articles model with CRUD access to its owner

--- a/app/views/homepage/index.html.erb
+++ b/app/views/homepage/index.html.erb
@@ -1,5 +1,6 @@
 <h1>Homepage#index</h1>
 <p>Find me in app/views/homepage/index.html.erb</p>
 
+<%= link_to 'Articles', controller: 'articles' %> <br>
 
 <%= link_to "Home", controller: 'homepage' %>
