Installed active_admin

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -12,7 +12,7 @@
 
 <p>
   <strong>User:</strong>
-  <%= @article.user_id %>
+  <%= @article.user_email %>
 </p>
 
 <% if user_signed_in? && (current_user.id == @article.user_id) %>
