Added Users and Sessions

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,8 @@
 
   <body>
     <p id='notice'><%= notice %></p>
-    
+    <p id='alert'><%= alert %></p>
+
     <%= yield %>
   </body>
 </html>
