--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,12 @@
+<% if current_author %>
+  Logged in as <%= current_author.email %>.
+  <%= link_to "Log Out", logout_path %>
+<% else %>
+  <%= link_to "Sign Up", signup_path %> or 
+  <%= link_to "Log In", login_path %>
+<% end %>
+
+
 <h1>Home#index</h1>
 <p>Find me in app/views/home/index.html.erb</p>
 
