--- a/app/views/authors/index.html.erb
+++ b/app/views/authors/index.html.erb
@@ -1,5 +1,3 @@
-<p id="notice"><%= notice %></p>
-
 <h1>Authors</h1>
 
 <table>
@@ -14,17 +12,17 @@
     <% @authors.each do |author| %>
       <tr>
         <td><%= author.email %></td>
-        <td><%= link_to 'Show', author %></td>
-        <td><%= link_to 'Edit', edit_author_path(author) %></td>
-        <td><%= link_to 'Destroy', author, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        
+        <% if current_author && current_author.id == author.id %>
+          <td><%= link_to 'Edit', edit_author_path(author) %></td>
+          <td><%= link_to 'Destroy', author, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% end %>
       </tr>
     <% end %>
   </tbody>
 </table>
 
 <br>
-
-<%= link_to 'New Author', new_author_path %>
 
 <br>
 <%= link_to "Home", :controller => "home" %>
