--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,16 @@
   <body>
     <p id='notice'><%= notice %></p>
     <p id='alert'><%= alert %></p>
+    <hr>
+
+    <% if current_author %>
+      Logged in as <%= current_author.email %>.
+      <%= link_to "Log Out", logout_path %>
+    <% else %>
+      <%= link_to "Sign Up", signup_path %> or 
+      <%= link_to "Log In", login_path %>
+    <% end %>
+    <hr>
 
     <%= yield %>
   </body>
