--- a/app/views/authors/show.html.erb
+++ b/app/views/authors/show.html.erb
@@ -3,5 +3,35 @@
   <%= @author.email %>
 </p>
 
-<%= link_to 'Edit', edit_author_path(@author) %> |
+<table>
+  <thead>
+    <tr>
+      <th>Title</th>
+      <th>Body</th>
+      <th>Author</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @author.posts.each do |post| %>
+      <tr>
+        <td><%= post.title %></td>
+        <td><%= post.body %></td>
+        <td><%= post.author_email %></td>
+        <td><%= link_to 'Show', post %></td>
+
+        <% if current_author && current_author.id == post.author_id %>
+          <td><%= link_to 'Edit', edit_post_path(post) %></td>
+          <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% end %>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
+<% if current_author && current_author.id == @author.id %>
+  <%= link_to 'Edit', edit_author_path(@author) %> |
+<% end %>
+
 <%= link_to 'Back', authors_path %>
