--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -10,8 +10,11 @@
 
 <p>
   <strong>Author:</strong>
-  <%= @post.author_id %>
+  <%= @post.author_email %>
 </p>
 
-<%= link_to 'Edit', edit_post_path(@post) %> |
+<% if current_author && current_author.id == @post.author_id %>
+  <%= link_to 'Edit', edit_post_path(@post) %> |
+<% end %>
+
 <%= link_to 'Back', posts_path %>
